src/objects/Opportunity_Splits_for_Templates__c.object
<CustomObject>
    <description>This object was created to be able to record the Opportunity Splits information on the Apttus Job Sheet.</description>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Opportunity Splits for Templates</relationshipLabel>
        <relationshipName>Opportunity_Splits_for_Templates</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SplitAmount__c</fullName>
        <label>Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SplitOwner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Team Member</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Opportunity_Splits_for_Templates</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SplitPercent__c</fullName>
        <label>Percent (%)</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <label>Opportunity Splits for Template</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Opportunity Splits for Templates Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Opportunity Splits for Templates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>